k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-hubii-service
spec:
  selector:
    app: devops-hubii
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
